# AIgriculture

./: .gitignore  README.md
backend/: ai_agent.py  app.py  historical_data.txt  pyproject.toml  speed_utils.py
backend/gee/dataset/: fetch_data.py
backend/gee/downloaded_data/: FAOSTAT_data_en_8-15-2025.csv
backend/gee/test/: main.py  testing.ipynb
backend/routes/: __init__.py  get_chatgpt_response.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/dataset/: test.json
frontend/src/: AgriDashboard.jsx  App.jsx
frontend/src/components/: AlertBanner.jsx  AlertsPanel.jsx  ChartsPanel.jsx  ContextInputPanel.jsx  HealthBar.jsx  MapPanel.jsx  NZMapPanel.jsx  SuggestionsPanel.jsx  index.js
frontend/src/pages/: AgriDashboard.css  AgriDashboard.jsx
frontend/src/services/: api.js
frontend/src/utils/: chartSetup.js  dataHelpers.js
